namespace ObjectController.Menu
{
    public enum ControllerButtonType
    {
        Move,
        Rotate,
        Scale,
        Done
    }
}