@startuml ObjectController

namespace ObjectController {
    interface ITransformAdjustable {
        +void AdjustTransform(Transform target, Vector3 velocity)
    }

    namespace Adjuster {
        abstract class BaseAdjuster
        class PositionAdjuster
        class RotateAdjuster
        class ScaleAdjuster

        BaseAdjuster --|> ObjectController.ITransformAdjustable
        BaseAdjuster <|-- PositionAdjuster
        BaseAdjuster <|-- RotateAdjuster
        BaseAdjuster <|-- ScaleAdjuster
        BaseAdjuster --> ObjectController.IInputEventProvider

        class AdjusterManager {
            +ITransformAdjustable CurrentAdjuster
            +IReadonlyReactiveProperty<ControllerButtonType> CurrentState
            +void SetCurrentAdjuster(ButtonType type)
        }

        AdjusterManager --> BaseAdjuster
    }

    namespace menu {
        class MenuButton{
            +ControllerButtonType type
            +SetButtonColor()
        }
        enum ControllerButtonType{
            Move
            Rotate
            Scale
            Done
        }
        class MenuPresentetor

        MenuPresentetor --> MenuButton
        MenuPresentetor --> ObjectController.Adjuster.AdjusterManager
        MenuButton ..> ControllerButtonType
    }

    namespace BoundingBox {

        class BoundingBoxGenerator {
            -void GenerateBoundingBox()
        }

        interface IReceiveRegenerateNotification {
            +IObservable<Unit> OnRegenerateBoundingBox
        }

        class BoundingBoxTarget
        interface IInputClickHandler<MRTK>

        BoundingBoxTarget --|> IInputClickHandler
        BoundingBoxTarget --> ObjectController.ObjectControllerManager
        BoundingBoxGenerator ..> ObjectController.ObjectControllerManager
        BoundingBoxGenerator --> IReceiveRegenerateNotification

        IReceiveRegenerateNotification <|-- ObjectController.Adjuster.BaseAdjuster
    }

    interface IManipulationHandler<MRTK>
    interface IInputEventProvider{
        IReadonlyReactiveProperty<bool> IsManipulating
        +Vector3 Velocity
    }
    class ManipulationProgressProvider{
        +BoolReactiveProperty IsManipulating
        +Vector3 Velocity
    }

    class ObjectControllerManager {
        +ReactiveProperty<GameObject> target
        +void SetTarget(GameObject target)
    }

    ManipulationProgressProvider --l|> IManipulationHandler
    ManipulationProgressProvider --|> IInputEventProvider
    ObjectControllerManager --> ITransformAdjustable
    ObjectControllerManager ..> ObjectController.Adjuster.AdjusterManager
    ObjectControllerManager ..> ManipulationProgressProvider

}

@enduml